fix: enhance text alignment styles in utility and message-block

--- a/src/components/message-block/message-block.module.css
+++ b/src/components/message-block/message-block.module.css
@@ -19,7 +19,6 @@
   overflow-wrap: break-word;
   width: 70%;
   white-space: normal;
-  text-align: left;
 }
 
 @media (max-width: 40em) {
