--- a/src/styles/utilities.module.css
+++ b/src/styles/utilities.module.css
@@ -95,10 +95,12 @@
 
 .alignSelfStart {
   align-self: start;
+  text-align: start;
 }
 
 .alignSelfEnd {
   align-self: end;
+  text-align: end;
 }
 
 @media screen and (max-width: 47rem) {
